--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.24</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
@@ -27,6 +32,7 @@
 		<module>beans</module>
 		<module>dao</module>
 		<module>runer</module>
+		<module>daoHibernate</module>
 	</modules>
 	<build>
 		<plugins>
